# hermes-plugin-agent-orchestrator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  after-install.md  pyproject.toml
.github/workflows/: ci.yml
hermes_ao/: SKILL.md  __init__.py  ao_client.py  cli.py  config.py  hooks.py  plugin.yaml  schemas.py  tools.py  utils.py
tests/: test_live.py  test_unit.py
